<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/box3" />

    <TextView
        android:id="@+id/box2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box1"
        app:layout_constraintTop_toTopOf="@+id/box3" />

    <TextView
        android:id="@+id/box3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box2"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <TextView
        android:id="@+id/box5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box4"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <TextView
        android:id="@+id/box4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <TextView
        android:id="@+id/box6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box1" />

    <TextView
        android:id="@+id/box7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box6"
        app:layout_constraintTop_toBottomOf="@+id/box2" />

    <TextView
        android:id="@+id/box8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box7"
        app:layout_constraintTop_toBottomOf="@+id/box3" />

    <TextView
        android:id="@+id/box9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box8"
        app:layout_constraintTop_toBottomOf="@+id/box4" />

    <TextView
        android:id="@+id/box10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box9"
        app:layout_constraintTop_toBottomOf="@+id/box5" />

    <TextView
        android:id="@+id/box11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box6" />

    <TextView
        android:id="@+id/box12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box11"
        app:layout_constraintTop_toBottomOf="@+id/box7" />

    <TextView
        android:id="@+id/box13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box12"
        app:layout_constraintTop_toBottomOf="@+id/box8" />

    <TextView
        android:id="@+id/box14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box13"
        app:layout_constraintTop_toBottomOf="@+id/box9" />

    <TextView
        android:id="@+id/box15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box14"
        app:layout_constraintTop_toBottomOf="@+id/box10" />

    <TextView
        android:id="@+id/box16"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box11" />

    <TextView
        android:id="@+id/box17"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box16"
        app:layout_constraintTop_toBottomOf="@+id/box12" />

    <TextView
        android:id="@+id/box18"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box17"
        app:layout_constraintTop_toBottomOf="@+id/box13" />

    <TextView
        android:id="@+id/box19"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box18"
        app:layout_constraintTop_toBottomOf="@+id/box14" />

    <TextView
        android:id="@+id/box20"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box19"
        app:layout_constraintTop_toBottomOf="@+id/box15" />

    <TextView
        android:id="@+id/box21"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box16" />

    <TextView
        android:id="@+id/box22"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box18"
        app:layout_constraintStart_toEndOf="@+id/box16"
        app:layout_constraintTop_toBottomOf="@+id/box17" />

    <TextView
        android:id="@+id/box23"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box19"
        app:layout_constraintStart_toEndOf="@+id/box17"
        app:layout_constraintTop_toBottomOf="@+id/box18" />

    <TextView
        android:id="@+id/box24"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/box20"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/box18"
        app:layout_constraintTop_toBottomOf="@+id/box19" />

    <TextView
        android:id="@+id/box25"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/box19"
        app:layout_constraintTop_toBottomOf="@+id/box20" />

    <EditText
        android:id="@+id/nickame_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/what_is_your_nickname"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box23"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submit_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickame_text" />

    <TextView
        android:id="@+id/clicks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clicks_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button"
        app:layout_constraintVertical_bias="0.114" />


</androidx.constraintlayout.widget.ConstraintLayout>